fix(erp): make full sync read-only and truthful